--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/white/application.css">
     <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="/styles/availmap.css">
+    <link rel="stylesheet" href="/styles/mapbox-gl.css">
     <link rel="stylesheet" href="/styles/custom.css">
     <!--STYLES END-->
   </head>
