--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -91,3 +91,12 @@ Overwrite Styles
 .active_geo{
   fill:none;
 }
+body.background-dark{
+  font-weight: normal;
+padding-bottom: 100px;
+background-color: rgba(74, 121, 147, 0.89);
+background: radial-gradient(farthest-side ellipse at 10% 0, rgba(255,255,255, 0.89), rgba(226, 226, 226, 0.87), rgba(200,200,200, 0.87)), url("/images/bgnoise_lg_dark.png");
+background: -webkit-radial-gradient(10% 0, farthest-side ellipse, rgba(255,255,255, 0.89), rgba(226, 226, 226, 0.87), rgba(200,200,200, 0.87)), url("/images/bgnoise_lg_dark.png");
+background: -moz-radial-gradient(10% 0, farthest-side ellipse, rgba(255,255,255, 0.89), rgba(226, 226, 226, 0.87), rgba(200,200,200, 0.87)), url("/images/bgnoise_lg_dark.png");
+}
+}
