--- a/assets/styles/white/application.css
+++ b/assets/styles/white/application.css
@@ -24183,13 +24183,13 @@ a.text-gray-lighter:hover {
 /**********************************/
 /* line 68, ../../src/sass/_base.scss */
 .sidebar {
-  position: absolute;
+  position: fixed;
   width: 160px;
   padding: 10px 0;
-  top: 0;
+  top: 60px;
   color: white;
   z-index: 1;
-  margin: 80px 0 0 25px;
+  margin: 0px 0 0 25px;
   font-weight: 300;
 }
 @media (min-height: 940px) {
