--- a/assets/styles/white/application.css
+++ b/assets/styles/white/application.css
@@ -24156,9 +24156,9 @@ a.text-gray-lighter:hover {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  position: absolute;
-  left: 65px;
-  top: 17px;
+  position: fixed;
+  left: 25px;
+  top: 12px;
   z-index: 1;
 }
 @media (min-height: 940px) {
