--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -29,6 +29,9 @@
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+.leaflet-interactive{
+  cursor: pointer;
+}
 
 .panel:nth-child(1n) .panel-heading {
   border-left: 5px solid #e5603b;
@@ -115,6 +118,10 @@ Unified Station ID highlight Styles
 
 .nv-line-data.highlighted-station{
   opacity: 1;
+}
+
+.station{
+  cursor: pointer; 
 }
 
 .station.highlighted-station{
