single station updates

--- a/views/landing/flux.ejs
+++ b/views/landing/flux.ejs
@@ -1,4 +1,5 @@
 <script>
-	User = <%- JSON.stringify(session.User) %>
+	User = <%- JSON.stringify(session.User) %>;
+	Datasource = <%- JSON.stringify(session.Datasource) %>;
 </script>
 <script src="/react/indexView.js"></script>
