--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/white/application.css">
     <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css">
+    <link rel="stylesheet" href="/styles/loader.css">
     <link rel="stylesheet" href="/styles/custom.css">
     <!--STYLES END-->
   </head>
