--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -130,9 +130,12 @@ Unified Station ID highlight Styles
 }
 .nv-bar.highlighted-station rect{
   fill:yellow;
-  strok-width:5px;
+  stroke-width:5px;
   fill-opacity: 1;
   stroke-opacity:1;
+}
+.nvd3 text{
+  fill:#000;
 }
 
 #map{box-shadow: 5px 5px 5px #aaa;}
