--- a/assets/styles/white/application.css
+++ b/assets/styles/white/application.css
@@ -3,37 +3,37 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  src: local("Open Sans Light"), local("OpenSans-Light"), url(fonts/google/open-sans-light.woff) format("woff");
+  src: local("Open Sans Light"), local("OpenSans-Light"), url(/styles/white/fonts/google/open-sans-light.woff) format("woff");
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local("Open Sans"), local("OpenSans"), url(fonts/google/open-sans.woff) format("woff");
+  src: local("Open Sans"), local("OpenSans"), url(/styles/white/fonts/google/open-sans.woff) format("woff");
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(fonts/google/open-sans-semibold.woff) format("woff");
+  src: local("Open Sans Semibold"), local("OpenSans-Semibold"), url(/styles/white/fonts/google/open-sans-semibold.woff) format("woff");
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: local("Open Sans Bold"), local("OpenSans-Bold"), url(fonts/google/open-sans-bold.woff) format("woff");
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url(/styles/white/fonts/google/open-sans-bold.woff) format("woff");
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
-  src: local("Open Sans Italic"), local("OpenSans-Italic"), url(fonts/google/open-sans-italic.woff) format("woff");
+  src: local("Open Sans Italic"), local("OpenSans-Italic"), url(/styles/white/fonts/google/open-sans-italic.woff) format("woff");
 }
 @font-face {
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 300;
-  src: local("Open Sans Light Italic"), local("OpenSansLight-Italic"), url(fonts/google/open-sans-italic-light.woff) format("woff");
+  src: local("Open Sans Light Italic"), local("OpenSansLight-Italic"), url(/styles/white/fonts/google/open-sans-italic-light.woff) format("woff");
 }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /* line 9, ../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_normalize.scss */
@@ -406,8 +406,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url("fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+  src: url("styles/fonts/bootstrap/glyphicons-halflings-regular.eot");
+  src: url("styles/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("styles/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("styles/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("styles/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
 }
 /* line 21, ../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_glyphicons.scss */
 .glyphicon {
@@ -8194,8 +8194,8 @@ button.close {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("./fonts/font-awesome/fontawesome-webfont.eot?v=4.2.0");
-  src: url("./fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.2.0") format("embedded-opentype"), url("./fonts/font-awesome/fontawesome-webfont.woff?v=4.2.0") format("woff"), url("./fonts/font-awesome/fontawesome-webfont.ttf?v=4.2.0") format("truetype"), url("./fonts/font-awesome/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular") format("svg");
+  src: url("/styles/white/fonts/font-awesome/fontawesome-webfont.eot?v=4.2.0");
+  src: url("/styles/white/fonts/font-awesome/fontawesome-webfont.eot?#iefix&v=4.2.0") format("embedded-opentype"), url("/styles/white/fonts/font-awesome/fontawesome-webfont.woff?v=4.2.0") format("woff"), url("/styles/white/fonts/font-awesome/fontawesome-webfont.ttf?v=4.2.0") format("truetype"), url("/styles/white/fonts/font-awesome/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
