--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <!--STYLES END-->
   </head>
 
-  <body class="background-dark">
+  <body class="background-dark sidebar-hidden">
     <%- body %>
     <!--SCRIPTS-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
