--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,18 +6,14 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/white/application.css">
-    <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css">
-    <link rel="stylesheet" href="/styles/loader.css">
-    <link rel="stylesheet" href="/styles/custom.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
   <body class="background-dark sidebar-hidden">
     <%- body %>
     <!--SCRIPTS-->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
