--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -393,8 +393,8 @@ display:inline;
 }
 
 #graphDIV {
-  height: 500px;
-  background-color: #fff;
+  height: 300px;
+  background-color:none;
   margin: 20px;
   position: relative;
 }
@@ -501,7 +501,7 @@ display:inline;
   line-height: 20px;
   padding: 5px 10px 5px 10px;
   text-align: left;
-  position: absolute;
+  position: fixed;
   background-color: #6baed6;
   color: #000;
   border: solid 5px #081d58;
